--- a/go/utils.mustache
+++ b/go/utils.mustache
@@ -365,22 +365,7 @@ func generateUUID() string {
 	return fmt.Sprintf("%x-%x-%x-%x-%x", uuid[0:4], uuid[4:6], uuid[6:8], uuid[8:10], uuid[10:])
 }
 
-func verifyWithRSA(content, sign, publicKey string) error {
-	block, _ := pem.Decode([]byte(publicKey))
-	if block == nil {
-		return fmt.Errorf("failed to parse PEM block containing the public key")
-	}
-
-	pub, err := x509.ParsePKIXPublicKey(block.Bytes)
-	if err != nil {
-		return err
-	}
-
-	rsaPub, ok := pub.(*rsa.PublicKey)
-	if !ok {
-		return fmt.Errorf("not an RSA public key")
-	}
-
+func verifyWithRSA(content, sign string, rsaPub *rsa.PublicKey) error {
 	hash := sha256.Sum256([]byte(content))
 	signature, err := base64.StdEncoding.DecodeString(sign)
 	if err != nil {
@@ -390,38 +375,13 @@ func verifyWithRSA(content, sign, publicKey string) error {
 	return rsa.VerifyPKCS1v15(rsaPub, crypto.SHA256, hash[:], signature)
 }
 
-func getPrivateKey(privateKey string) (*rsa.PrivateKey, error) {
-	block, _ := pem.Decode([]byte(privateKey))
-	if block == nil {
-		return nil, errors.New("failed to decode PEM block containing private key")
-	}
-
-	key, err := x509.ParsePKCS8PrivateKey(block.Bytes)
-	if err != nil {
-		return nil, err
-	}
-
-	rsaKey, ok := key.(*rsa.PrivateKey)
-	if !ok {
-		return nil, errors.New("not RSA private key")
-	}
-
-	return rsaKey, nil
-}
-
-func signWithRSA(content string, privateKey string) (string, error) {
+func signWithRSA(content string, priKey *rsa.PrivateKey) (string, error) {
 	// Convert the content to bytes using the specified charset
 	contentBytes := []byte(content)
 
-	// Get the RSA private key
-	priKey, err := getPrivateKey(privateKey)
-	if err != nil {
-		return "", fmt.Errorf("failed to get private key: %v", err)
-	}
-
 	// Compute SHA256 hash of the content
 	hash := sha256.New()
-	_, err = hash.Write(contentBytes)
+	_, err := hash.Write(contentBytes)
 	if err != nil {
 		return "", fmt.Errorf("failed to write content to hash: %v", err)
 	}
@@ -436,4 +396,44 @@ func signWithRSA(content string, privateKey string) (string, error) {
 	// Encode the signed content to Base64
 	signedString := base64.StdEncoding.EncodeToString(signedBytes)
 	return signedString, nil
+}
+
+// 通过私钥的文本内容加载私钥
+func loadPrivateKey(privateKeyStr string) (privateKey *rsa.PrivateKey, err error) {
+	block, _ := pem.Decode([]byte(privateKeyStr))
+	if block == nil {
+		return nil, fmt.Errorf("decode private key err")
+	}
+	if block.Type != "PRIVATE KEY" {
+		return nil, fmt.Errorf("the kind of PEM should be PRVATE KEY")
+	}
+	key, err := x509.ParsePKCS8PrivateKey(block.Bytes)
+	if err != nil {
+		return nil, fmt.Errorf("parse private key err:%s", err.Error())
+	}
+	privateKey, ok := key.(*rsa.PrivateKey)
+	if !ok {
+		return nil, fmt.Errorf("not a RSA private key")
+	}
+	return privateKey, nil
+}
+
+// 通过公钥的文本内容加载公钥
+func loadPublicKey(publicKeyStr string) (publicKey *rsa.PublicKey, err error) {
+	block, _ := pem.Decode([]byte(publicKeyStr))
+	if block == nil {
+		return nil, errors.New("decode public key error")
+	}
+	if block.Type != "PUBLIC KEY" {
+		return nil, fmt.Errorf("the kind of PEM should be PUBLIC KEY")
+	}
+	key, err := x509.ParsePKIXPublicKey(block.Bytes)
+	if err != nil {
+		return nil, fmt.Errorf("parse public key err:%s", err.Error())
+	}
+	publicKey, ok := key.(*rsa.PublicKey)
+	if !ok {
+		return nil, fmt.Errorf("%s is not rsa public key", publicKeyStr)
+	}
+	return publicKey, nil
 }
